--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.copilotiq'
@@ -10,10 +11,24 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.2')
+    testImplementation('org.mockito:mockito-core:4.6.1')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
+    testRuntimeOnly('org.mockito:mockito-core:4.6.1')
 }
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    mainClass = 'com.copilotiq.Application'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.copilotiq.Application'
+        )
+    }
 }
